--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@rollup/plugin-alias": "^2.2.0",
     "@rollup/plugin-commonjs": "^11.0.2",
@@ -30,6 +32,10 @@
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "@vue/test-utils": "^1.0.0-beta.32",
+    "babel-jest": "^25.2.6",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
     "codecov": "^3.6.5",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
@@ -37,6 +43,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
     "fs-extra": "^8.1.0",
+    "husky": "^4.2.3",
+    "jest": "^25.2.7",
     "minify": "^4.1.3",
     "minimist": "^1.2.5",
     "rollup": "^1.32.1",
@@ -48,10 +56,7 @@
     "vue": "^2.6.11",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.4.0",
-    "husky": "^4.2.3",
-    "jest": "^25.2.7",
-    "babel-jest": "^25.2.6"
+    "vuepress": "^1.4.0"
   },
   "peerDependencies": {
     "vue": "^2.6.11"
