--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-alias": "^2.2.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-replace": "^2.3.1",
+    "@types/jest": "^25.2.1",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "@vue/test-utils": "^1.0.0-beta.32",
