--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueventjs",
-  "version": "1.0.6",
+  "version": "1.1.0-beta.0",
   "repository": "git@github.com:ShailenNaidoo/vuevent.git",
   "author": "shailen <shailen@lumkani.com>",
   "license": "MIT",
